W9/w9/error.txt
SecureData.cpp:15:53: error: 'Cryptor' does not name a type
      void converter(char* t, char key, int n, const Cryptor& c) {
                                                     ^
SecureData.cpp:15:62: error: ISO C++ forbids declaration of 'c' with no type [-fpermissive]
      void converter(char* t, char key, int n, const Cryptor& c) {
                                                              ^
SecureData.cpp: In function 'void w10::converter(char*, char, int, const int&)':
SecureData.cpp:17:32: error: expression cannot be used as a function
              t[i] = c(t[i], key);
                                ^
SecureData.cpp: At global scope:
SecureData.cpp:20:6: error: 'SecureData' does not name a type
      SecureData::SecureData(const char* file, char key, std::ofstream* pOfs) {
      ^
SecureData.cpp:56:6: error: 'SecureData' does not name a type
      SecureData::~SecureData() {
      ^
SecureData.cpp:60:11: error: 'SecureData' has not been declared
      void SecureData::display(std::ostream& os) const {
           ^
SecureData.cpp:60:49: error: non-member function 'void w10::display(std::ostream&)' cannot have cv-qualifier
      void SecureData::display(std::ostream& os) const {
                                                 ^
SecureData.cpp: In function 'void w10::display(std::ostream&)':
SecureData.cpp:61:14: error: 'text' was not declared in this scope
          if (text && !encoded)
              ^
SecureData.cpp:61:23: error: 'encoded' was not declared in this scope
          if (text && !encoded)
                       ^
SecureData.cpp: At global scope:
SecureData.cpp:69:11: error: 'SecureData' has not been declared
      void SecureData::code(char key) {
           ^
SecureData.cpp: In function 'void w10::code(char)':
SecureData.cpp:70:40: error: 'text' was not declared in this scope
    std::thread t1(std::bind(converter, text, key, nbytes / 2, Cryptor()));
                                        ^
SecureData.cpp:70:51: error: 'nbytes' was not declared in this scope
    std::thread t1(std::bind(converter, text, key, nbytes / 2, Cryptor()));
                                                   ^
SecureData.cpp:70:71: error: 'Cryptor' was not declared in this scope
    std::thread t1(std::bind(converter, text, key, nbytes / 2, Cryptor()));
                                                                       ^
SecureData.cpp:70:71: note: suggested alternative:
In file included from SecureData.cpp:11:0:
SecureData.h:10:8: note:   'w9::Cryptor'
  class Cryptor {
        ^
SecureData.cpp:76:10: error: 'encoded' was not declared in this scope
          encoded = !encoded;
          ^
SecureData.cpp: At global scope:
SecureData.cpp:79:11: error: 'SecureData' has not been declared
      void SecureData::backup(const char* file) {
           ^
SecureData.cpp: In function 'void w10::backup(const char*)':
SecureData.cpp:80:15: error: 'text' was not declared in this scope
          if (!text)
               ^
SecureData.cpp:82:20: error: 'encoded' was not declared in this scope
          else if (!encoded)
                    ^
SecureData.cpp: At global scope:
SecureData.cpp:98:11: error: 'SecureData' has not been declared
      void SecureData::restore(const char* file, char key) {
           ^
SecureData.cpp: In function 'void w10::restore(const char*, char)':
SecureData.cpp:106:13: error: 'text' was not declared in this scope
    delete[] text;
             ^
SecureData.cpp:107:20: error: 'nbytes' was not declared in this scope
    text = new char[nbytes + 1];
                    ^
SecureData.cpp:114:11: error: 'ofs' was not declared in this scope
          *ofs << "\n" << nbytes + 1 << " bytes copied from binary file "
           ^
SecureData.cpp: At global scope:
SecureData.cpp:122:55: error: 'SecureData' does not name a type
      std::ostream& operator<<(std::ostream& os, const SecureData& sd) {
                                                       ^
SecureData.cpp:122:67: error: ISO C++ forbids declaration of 'sd' with no type [-fpermissive]
      std::ostream& operator<<(std::ostream& os, const SecureData& sd) {
                                                                   ^
SecureData.cpp: In function 'std::ostream& w10::operator<<(std::ostream&, const int&)':
SecureData.cpp:123:13: error: request for member 'display' in 'sd', which is of non-class type 'const int'
          sd.display(os);
             ^
